# Minuteur_Async

./: .env  .gitignore  Auto  DB_LOCAL.sqlite3  DB_TEST.sqlite3  README.md  config.ini  connexion.txt  data_send.py  db.sql  db.sqlite3  donnees.xlsx  donnees_2023-06-13.xlsx  error  index.py  main.py  pyproject.toml  query.py  requirements.txt
data/: donnees_2023-06-13.xlsx  donnees_2023-06-15.xlsx  donnees_2023-07-19.xlsx  donnees_AGRICORP_2023-07-21.xlsx  donnees_AGRICORP_2023-07-24.xlsx  donnees_AGRIFEED_2023-07-21.xlsx  donnees_AGRIFEED_2023-07-24.xlsx  donnees_AGRIMOTORS_2023-07-21.xlsx  donnees_AGRIMOTORS_2023-07-24.xlsx  donnees_AGRIVET ANTSIRABE_2023-07-21.xlsx  donnees_AGRIVET ANTSIRABE_2023-07-24.xlsx  donnees_AGRIVET FIANARANTSOA_2023-07-21.xlsx  donnees_AGRIVET FIANARANTSOA_2023-07-24.xlsx  donnees_AGRIVETAM_2023-07-21.xlsx  donnees_AGRIVETAM_2023-07-24.xlsx  donnees_BLAST_2023-07-21.xlsx  donnees_BLAST_2023-07-24.xlsx  donnees_BOVIMA_2023-07-21.xlsx  donnees_BOVIMA_2023-07-24.xlsx  donnees_FIRSTENERGY_2023-07-21.xlsx  donnees_FIRSTENERGY_2023-07-24.xlsx  donnees_FLY LEASE_2023-07-21.xlsx  donnees_FLY LEASE_2023-07-24.xlsx  donnees_FLY TECHNOLOGIES_2023-07-19.xlsx  donnees_FLY TECHNOLOGIES_2023-07-21.xlsx  donnees_FLY TECHNOLOGIES_2023-07-24.xlsx  donnees_ID RENTAL_2023-07-21.xlsx  donnees_ID RENTAL_2023-07-24.xlsx  donnees_IDF2010_2023-07-21.xlsx  donnees_IDF2010_2023-07-24.xlsx  donnees_IDMOTORS_2023-07-21.xlsx  donnees_IDMOTORS_2023-07-24.xlsx  donnees_INTERKEM_2023-07-21.xlsx  donnees_INTERKEM_2023-07-24.xlsx  donnees_MABEL2_2023-07-19.xlsx  (+8 more)
(+52 files in other folders)
