[tool.poetry]
name = "2 - minuteur-async"
version = "0.1.0"
description = ""
authors = ["muriel.raharison <muriel.raharison@inviso-group.com>"]
readme = "README.md"
packages = [{include = "2 _ minuteur_async"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
